--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout("./layouts/boilerplate") %>
+<h1>All Campgrounds</h1>
+<a href="/campgrounds/new">Add Campground</a>
+<div>
+    <% for (let camp of campgrounds) { %>
+    <!-- <li><a href="/campgrounds/<%= camp._id %> "><%= camp.title %></a> </li> -->
+    <div class="card mb-3">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="<%= camp.image %> " class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"><%= camp.title %> </h5>
+                    <p class="card-text"><%= camp.description %> </p>
+                    <p class="card-text"><small class="text-muted"><%= camp.location %> </small></p>
+                    <a href="/campgrounds/<%= camp._id %>" class="btn btn-primary">View <%= camp.title %> </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds</title>
-</head>
-
-<body>
-    <h1>All Campgrounds</h1>
-    <a href="/campgrounds/new">Add Campground</a>
-    <ul>
-        <% for (let camp of campgrounds) { %>
-        <li><a href="/campgrounds/<%= camp._id %> "><%= camp.title %></a> </li>
-        <% } %>
-    </ul>
-
-</body>
-
-</html>
+    <% } %>
+</div>
