--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,39 +4,77 @@
     <h1 class="text-center">Edit Campground</h1>
 </div>
 <div class="col-6 offset-3">
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" class="needs-validation" novalidate>
         <div class="mb-3">
             <label class="form-label" for="title">Title: </label>
-            <input class="form-control" type="text" name="campground[title]" id="title"
-                value="<%= campground.title %> ">
+            <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %> "
+                required>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="location">Location: </label>
             <input class="form-control" type="text" name="campground[location]" id="location"
-                value="<%= campground.location %> ">
+                value="<%= campground.location %> " required>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="image">Image Url: </label>
-            <input class="form-control" type="text" name="campground[image]" id="image"
-                value="<%= campground.image %> ">
+            <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %> "
+                required>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="price">Campground Price:</label>
             <div class="input-group">
                 <span class="input-group-text" id="price-label">$</span>
                 <input type="text" class="form-control" id="price" placeholder="0.00" aria-describedby="price-label"
-                    aria-label="price" name="campground[price]" value="<%= campground.price %> ">
+                    aria-label="price" name="campground[price]" value="<%= campground.price %> " required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
 
             </div>
 
         </div>
         <div class="mb-3">
             <label class="form-label" for="description">Description: </label>
-            <textarea class="form-control" type="text" name="campground[description]"
-                id="description"><%= campground.description %> "</textarea>
+            <textarea class="form-control" type="text" name="campground[description]" id="description"
+                required><%= campground.description %> "</textarea>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3"> <button class="btn btn-success">Update Campground</button></div>
 
     </form>
     <a href="/campgrounds/<%= campground._id %> ">Back To Campground</a>
 </div>
+
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict'
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll('.needs-validation')
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+    })()
+</script>
