--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,35 +3,75 @@
     <h1 class="text-center">New Campground</h1>
 </div>
 <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST">
+    <form action="/campgrounds" method="POST" class="needs-validation" novalidate>
         <div class="mb-3">
             <label class="form-label" for="title">Title: </label>
-            <input class="form-control" type="text" name="campground[title]" id="title">
+            <input class="form-control" type="text" name="campground[title]" id="title" required>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="location">Location: </label>
-            <input class="form-control" type="text" name="campground[location]" id="location">
+            <input class="form-control" type="text" name="campground[location]" id="location" required>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="image">Image Url: </label>
-            <input class="form-control" type="text" name="campground[image]" id="image">
+            <input class="form-control" type="text" name="campground[image]" id="image" required>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="price">Campground Price:</label>
             <div class="input-group">
                 <span class="input-group-text" id="price-label">$</span>
                 <input type="text" class="form-control" id="price" placeholder="0.00" aria-describedby="price-label"
-                    aria-label="price" name="campground[price]">
+                    aria-label="price" name="campground[price]" required>
 
+            </div>
+            <div class="valid-feedback">
+                Looks good!
             </div>
 
         </div>
         <div class="mb-3">
             <label class="form-label" for="description">Description: </label>
-            <textarea class="form-control" type="text" name="campground[description]" id="description"></textarea>
+            <textarea class="form-control" type="text" name="campground[description]" id="description"
+                required></textarea>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3"> <button class="btn btn-success">Add Campground</button></div>
 
     </form>
     <a href="/campgrounds">All Campgrounds</a>
 </div>
+
+
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict'
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll('.needs-validation')
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+    })()
+</script>
