--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
 <% layout("./layouts/boilerplate") %>
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6">
         <div class="card">
             <img src="<%= campground.image %>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -18,6 +18,37 @@
                 </form>
             </div>
         </div>
+
+    </div>
+    <div class="col-6">
+        <h2>Leave a Review</h2>
+        <form action="/campgrounds/<%= campground._id %>/reviews " method="POST" class="mb-3 needs-validation"
+            novalidate>
+            <div class="mb-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" class="form-range" id="rating" min="1" max="5" name="review[rating]">
+            </div>
+            <div class="mb-3">
+                <label for="body" class="form-label">Review</label>
+                <textarea type="text" class="form-control" id="body" name="review[body]" required></textarea>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <button class="btn btn-success">Submit</button>
+        </form>
+        <% for (review of campground.reviews) { %>
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Rating: <%= review.rating %> </h5>
+                <p class="card-text">Review: <%= review.body %> </p>
+                <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+                    method="POST">
+                    <button class="btn btn-sm btn-danger">DELETE</button>
+                </form>
+            </div>
+        </div>
+        <% } %>
     </div>
 
 </div>
