--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,14 +9,19 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campground.location %></li>
+                <li class="list-group-item">Submitted by: <%= campground.author.username %></li>
                 <li class="list-group-item">$<%= campground.price %>/night</li>
             </ul>
+
+            <% if (currentUser && campground.author.equals(currentUser._id)) {%>
             <div class="card-body">
+
                 <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
                     <button class="btn btn-danger">DELETE</button>
                 </form>
             </div>
+            <% } %>
         </div>
 
     </div>
