--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout("./layouts/boilerplate") %>
+
 <div class="row">
     <div class="col-6">
         <div class="card">
@@ -30,12 +31,32 @@
         <h2>Leave a Review</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews " method="POST" class="mb-3 needs-validation"
             novalidate>
-            <div class="mb-3">
-                <label for="rating" class="form-label">Rating</label>
-                <input type="range" class="form-range" id="rating" min="1" max="5" name="review[rating]">
+            <div class="">
+                <label for="rating" class="form-label">Rating: </label>
+                <fieldset class="starability-basic">
+                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
+                        aria-label="No rating." />
+
+                    <input type="radio" id="rate1" name="review[rating]" value="1" />
+                    <label for="rate1">1 star.</label>
+
+                    <input type="radio" id="rate2" name="review[rating]" value="2" />
+                    <label for="rate2">2 stars.</label>
+
+                    <input type="radio" id="rate3" name="review[rating]" value="3" />
+                    <label for="rate3">3 stars.</label>
+
+                    <input type="radio" id="rate4" name="review[rating]" value="4" />
+                    <label for="rate4">4 stars.</label>
+
+                    <input type="radio" id="rate5" name="review[rating]" value="5" />
+                    <label for="rate5">5 stars.</label>
+
+                </fieldset>
+
             </div>
             <div class="mb-3">
-                <label for="body" class="form-label">Review</label>
+                <label for="body" class="form-label">Review:</label>
                 <textarea type="text" class="form-control" id="body" name="review[body]" required></textarea>
                 <div class="valid-feedback">
                     Looks good!
@@ -47,8 +68,10 @@
         <% for (review of campground.reviews) { %>
         <div class="card mb-3">
             <div class="card-body">
-                <h5 class="card-title">Rating: <%= review.rating %> </h5>
-                <h6 class="card-subtitle mb-2 text-muted">By: <%= review.author.username %> </h6>
+                <h6 class="card-subtitle mb-2"><%= review.author.username %> </h6>
+                <p class="starability-result" data-rating=<%= review.rating %>>
+                    Rated: <%= review.rating %> stars
+                </p>
                 <p class="card-text">Review: <%= review.body %> </p>
                 <% if (currentUser && review.author.equals(currentUser._id)){ %>
                 <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
