--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
     <h1 class="text-center">New Campground</h1>
 </div>
 <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST" class="needs-validation" novalidate>
+    <form action="/campgrounds" method="POST" class="needs-validation" novalidate enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label" for="title">Title: </label>
             <input class="form-control" type="text" name="campground[title]" id="title" required>
@@ -19,8 +19,8 @@
             </div>
         </div>
         <div class="mb-3">
-            <label class="form-label" for="image">Image Url: </label>
-            <input class="form-control" type="text" name="campground[image]" id="image" required>
+            <label class="form-label" for="image">Image: </label>
+            <input class="form-control" type="file" name="image" id="image" multiple required>
             <div class="valid-feedback">
                 Looks good!
             </div>
