--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,7 +4,8 @@
     <h1 class="text-center">Edit Campground</h1>
 </div>
 <div class="col-6 offset-3">
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" class="needs-validation" novalidate>
+    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" class="needs-validation" novalidate
+        enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label" for="title">Title: </label>
             <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %> "
@@ -21,14 +22,7 @@
                 Looks good!
             </div>
         </div>
-        <div class="mb-3">
-            <label class="form-label" for="image">Image Url: </label>
-            <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %> "
-                required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-        </div>
+
         <div class="mb-3">
             <label class="form-label" for="price">Campground Price:</label>
             <div class="input-group">
@@ -49,6 +43,25 @@
             <div class="valid-feedback">
                 Looks good!
             </div>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="image">Add Images: </label>
+            <input class="form-control" type="file" name="image" id="image" multiple>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+        <div class="mb-3">
+            <% campground.images.forEach((img, i)=>{ %>
+            <img src="<%= img.thumbnail%> " alt="" class="img-thumbnail">
+
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="<%= img.filename %>" id="img-<%= i %>"
+                    name="deleteImages[]">
+                <label class="form-check-label" for="img-<%= i %> ">
+                    Delete </label>
+            </div>
+            <% }) %>
         </div>
         <div class="mb-3"> <button class="btn btn-success">Update Campground</button></div>
 
