--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,12 @@
 <% layout("./layouts/boilerplate") %>
+<script>
+    const mapToken = "<%- process.env.MAPBOX_TOKEN %>";
+    const campground = <%- JSON.stringify(campground) %>
+</script>
 
 <div class="row">
     <div class="col-6">
+        <div id='map' style='width: 400px; height: 300px;'></div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
@@ -105,3 +110,5 @@
     </div>
 
 </div>
+
+<script src="/js/showMap.js"></script>
